--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 h1 {
   font-size: 128px;
   font-family: 'Century Gothic Paneuropean',sans-serif;
+  overflow-wrap: break-word;
 }
 
 h2 {
@@ -42,109 +43,26 @@ p {
   /* background-color: yellowgreen; */
 }
 
-.menu-trigger,
-.menu-trigger span {
-  display: inline-block;
-  transition: all .4s;
-  box-sizing: border-box;
+hr {
+  width: 90vw;
+  margin: 0 auto;
 }
 
-.menu-trigger {
-  position: relative;
-  width: 50px;
-  height: 44px;
-  background: none;
-  border: none;
-  appearance: none;
-  cursor: pointer;
-}
-
-.menu-trigger span {
-  position: absolute;
-  left: 0;
+#top {
   width: 100%;
-  height: 2px;
-  background-color: black;
-  border-radius: 0;
 }
 
-.menu-trigger span:nth-of-type(1) {
-  top: 0;
-  animation: menu07-bar01 .75s forwards;
+.content-box {
+  width: 90vw;
+  margin: 40px auto 0;
 }
 
-@keyframes menu07-bar01 {
-  0% {
-    transform: translateY(20px) rotate(45deg);
-  }
-  50% {
-    transform: translateY(20px) rotate(0);
-  }
-  100% {
-    transform: translateY(0) rotate(0);
-  }
+.logo {
+  width: 25%;
+  box-sizing: border-box;
+  padding: 0 3% 3% 0;
 }
 
-.menu-trigger span:nth-of-type(2) {
-  top: 20px;
-  transition: all .25s .25s;
-  opacity: 1;
-}
-
-.menu-trigger span:nth-of-type(3) {
-  bottom: 0;
-  animation: menu07-bar03 .75s forwards;
-}
-
-@keyframes menu07-bar03 {
-  0% {
-    transform: translateY(-20px) rotate(-45deg);
-  }
-  50% {
-    transform: translateY(-20px) rotate(0);
-  }
-  100% {
-    transform: translateY(0) rotate(0);
-  }
-}
-
-#menu07.active span {
-  background-color: #fff;
-  animation: 0.3s;
-}
-
-#menu07.active span:nth-of-type(1) {
-  animation: active-menu07-bar01 .75s forwards;
-}
-
-@keyframes active-menu07-bar01 {
-  0% {
-    transform: translateY(0) rotate(0);
-  }
-  50% {
-    transform: translateY(20px) rotate(0);
-  }
-  100% {
-    transform: translateY(20px) rotate(45deg);
-  }
-}
-
-#menu07.active span:nth-of-type(2) {
-  opacity: 0;
-}
-
-#menu07.active span:nth-of-type(3) {
-  animation: active-menu07-bar03 .75s forwards;
-}
-
-@keyframes active-menu07-bar03 {
-  0% {
-    transform: translateY(0) rotate(0);
-  }
-  50% {
-    transform: translateY(-20px) rotate(0);
-  }
-  100% {
-    transform: translateY(-20px) rotate(-45deg);
-  }
+.logo img {
+  width: 100%;
 }
