--- a/css/index.css
+++ b/css/index.css
@@ -13,5 +13,6 @@
   width: 90vw;
   font-size: 15vw;
   box-sizing: border-box;
-  background-color: turquoise;
+  /* background-color: turquoise; */
+  margin-bottom: -2.5vh;
 }
