--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,15 @@ body {
   font-family: sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 h1 {
   font-size: 128px;
   font-family: 'Century Gothic Paneuropean',sans-serif;
   overflow-wrap: break-word;
+  line-height: 1.1;
 }
 
 h2 {
@@ -25,6 +30,7 @@ h3 {
 h4 {
   font-family: 'Helvetica Neue',  sans-serif;
   font-size: 32px;
+  line-height: 1.2;
 }
 
 h5 {
@@ -65,4 +71,41 @@ hr {
 
 .logo img {
   width: 100%;
+}
+
+#page-top {
+  position: fixed;
+  right: 5%;
+  bottom: 30px;
+  z-index: 1000;
+  opacity: 0;
+  transform: translateY(100px);
+}
+
+#page-top.UpMove2 {
+  animation: UpAnime2 0.5s forwards;
+}
+
+@keyframes UpAnime2 {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#page-top.DownMove2 {
+  animation: DownMove2 0.5s forwards;
+}
+
+@keyframes DownAnime2 {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }to{
+    opacity: 0;
+    transform: translateY(100px);
+  }
 }
