--- a/konpake/css/load.css
+++ b/konpake/css/load.css
@@ -33,13 +33,13 @@
 }
 
 #wrap {
-  width: 100%;
+  width: 90vw;
   height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 6.65vw;
+  font-size: 6vw;
   font-weight: 900;
   /* background-color: yellow; */
 }
