--- a/bird_coffee/css/style.css
+++ b/bird_coffee/css/style.css
@@ -85,7 +85,7 @@ p {
 }
 
 .header-nav img {
-  height: 56px;
+  height: 57px;
 }
 
 .g-nav {
@@ -207,7 +207,7 @@ p {
 
 .concept-img {
   width: 40%;
-  margin-top: 56px;
+  margin-top: 112px;
 }
 
 .concept-img img {
@@ -369,19 +369,46 @@ p {
 
 
 .section5 h2 {
-  width: 480px;
+  /* width: 480px; */
   margin: 112px 0 112px 56px;
   letter-spacing: 0.1em;
   /* background-color: blueviolet; */
 }
 
-.section5 h2:hover {
+.section5 h2 {
+  position: relative;
+}
+
+.section5 h2.current a,
+.section5 h2 a:hover {
+  color: #292929;
+}
+
+.section5 h2 a::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 38%;
+  height: 2px;
+  background-color: #292929;
+  transition: all .3s;
+  transform: scale(0,1);
+  transform-origin: center top;
+}
+
+.section5 h2.current a::after,
+.section5 h2 a:hover::after {
+  transform: scale(1,1);
+}
+
+/* .section5 h2:hover {
   color: #292929;
   opacity: 0.5;
   text-decoration: underline;
   text-decoration-color: #292929;
   transition: 0.5s;
-}
+} */
 
 p.item-name {
   padding: 16px 0 8px 0;
@@ -543,3 +570,58 @@ footer a {
 }
 
 
+/* fadeinanime */
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+.fadeIn {
+  animation-name: fadeInAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeInAnime {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeUp {
+  animation-name: fadeUpAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.delay-time02 {
+  animation-delay: 0.2s;
+}
+
+.delay-time03 {
+  animation-delay: 0.3s;
+  animation-duration: 1.5s;
+}
+
+.delay-time04 {
+  animation-delay: 0.4s;
+}
+
+.delay-time06 {
+  animation-delay: 0.6s;
+}
