--- a/bird_coffee/css/style_mb.css
+++ b/bird_coffee/css/style_mb.css
@@ -64,7 +64,7 @@ p {
 }
 
 .header-nav h1 img {
-  height: 48px;
+  height: 48.5px;
   position: fixed;
   top: 0;
   z-index: 21;
@@ -500,4 +500,59 @@ p.small {
 
 .pay-logo ul li {
   margin: 0 8px 32px 0 ;
+}
+
+.fadeUpTrigger {
+  opacity: 0;
+}
+
+.fadeIn {
+  animation-name: fadeInAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeInAnime {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeUp {
+  animation-name: fadeUpAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.delay-time02 {
+  animation-delay: 0.2s;
+}
+
+.delay-time03 {
+  animation-delay: 0.3s;
+  animation-duration: 1.5s;
+}
+
+.delay-time04 {
+  animation-delay: 0.4s;
+}
+
+.delay-time06 {
+  animation-delay: 0.6s;
 }
