--- a/css/style.css
+++ b/css/style.css
@@ -9,69 +9,246 @@ html {
 }
 
 h1 {
-  font-size: 128px;
-  font-family: 'Century Gothic Paneuropean',sans-serif;
-  overflow-wrap: break-word;
-  line-height: 1.1;
+  font-size: 96px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  /* overflow-wrap: break-word; */
+  /* background-color: tomato; */
 }
 
 h2 {
-  font-family: 'Helvetica Neue',  sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 48px;
   font-weight: 700;
 }
 
 h3 {
-  font-family: 'Helvetica Neue',  sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 32px;
   font-weight: 700;
 }
 
 h4 {
-  font-family: 'Helvetica Neue',  sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 32px;
   line-height: 1.2;
 }
 
 h5 {
-  font-family: 'Helvetica Neue',  sans-serif;
-  font-size: 24px;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+h6 {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-size: 20px;
 }
 
 p {
-  font-family: 'Helvetica Neue',  sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
 
-.header-bg h2 {
-  font-family: 'Century Gothic Paneuropean', sans-serif;
-  font-weight: 400;
-  /* background-color: yellowgreen; */
-}
-
-hr {
+/* hr {
   width: 90vw;
   margin: 0 auto;
+} */
+
+
+
+.header-bg {
+  width: 80%;
+  height: 378px;
+  box-sizing: border-box;
+  margin: 32px auto 0px;
+  /* background-color: aqua; */
+  position: relative;
 }
 
-#top {
-  width: 100%;
+.p-img img {
+  height: 200px;
+  margin-top: 8px;
+  margin-left: 16px;
+}
+
+.big-header {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.top-title {
+  height: 15vh;
+  position: absolute;
+  right: 0;
+  bottom: 5vh;
+  /* background-color: yellow; */
 }
 
 .content-box {
-  width: 90vw;
-  margin: 40px auto 0;
+  width: 80%;
+  margin: 0 auto;
+  height: 80vh;
+  /* background-color: bisque; */
 }
 
-.logo {
+ul.content-list {
+  display: flex;
+}
+
+.item {
+  width: 16.6%;
+  height: 80vh;
+  /* background-color: yellow; */
+  position: relative;
+  display: flex;
+}
+
+.item .title {
+  /* background-color: violet; */
   width: 25%;
-  box-sizing: border-box;
-  padding: 0 3% 3% 0;
 }
 
-.logo img {
-  width: 100%;
+.item .title h5,
+.item .title p {
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  text-orientation: sideways;
+  box-sizing: border-box;
+  /* background-color: blue; */
+  padding-bottom: 16px;
 }
+
+.title .box-right {
+  width: 100%;
+  box-sizing: border-box;
+  margin-left: 30%;
+}
+
+.item .img {
+  width: 75%;
+  height: 100%;
+  box-sizing: border-box;
+  position: absolute;
+  right: 0;
+  overflow: auto;
+  /* background-color: aquamarine; */
+}
+
+.item img {
+  width: 100%;
+  margin-bottom: 16px;
+}
+
+.tennoharuka-logo {
+  width: 41%;
+  margin: 0 auto;
+}
+
+
+
+/* fade In Up Down */
+.fadeIn {
+  animation-name: fadeInAnime;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeInAnime {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeUp {
+  animation-name: fadeUpAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeUpAnime {
+  from {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fadeDown {
+  animation-name: fadeDownAnime;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes fadeDownAnime {
+  from {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+/* zoom In */
+.zoomIn{
+  animation-name:zoomInAnime;
+  animation-duration:0.5s;
+  animation-fill-mode:forwards;
+}
+
+@keyframes zoomInAnime{
+  from {
+  transform: scale(0.6);
+  }
+
+  to {
+      transform: scale(1);
+  }
+}
+
+
+/* animation delay */
+.delay-time10 {
+  animation-delay: 1.0s;
+}
+
+.delay-time11 {
+  animation-delay: 1.1s;
+}
+
+.delay-time12 {
+  animation-delay: 1.2s;
+}
+
+.delay-time13 {
+  animation-delay: 1.3s;
+}
+
+.delay-time14 {
+  animation-delay: 1.4s;
+}
+
+.delay-time15 {
+  animation-delay: 1.5s;
+}
+
+
+/* CONTENTS page top */
 
 #page-top {
   position: fixed;
@@ -90,7 +267,9 @@ hr {
   from {
     opacity: 0;
     transform: translateY(100px);
-  }to{
+  }
+
+  to {
     opacity: 1;
     transform: translateY(0);
   }
@@ -104,7 +283,9 @@ hr {
   from {
     opacity: 1;
     transform: translateY(0);
-  }to{
+  }
+
+  to {
     opacity: 0;
     transform: translateY(100px);
   }
