--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: sans-serif;
+  overflow-wrap: break-word;
 }
 
 html {
@@ -12,6 +13,7 @@ h1 {
   font-size: 96px;
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: 700;
+  line-height: 0.8;
   /* overflow-wrap: break-word; */
   /* background-color: tomato; */
 }
@@ -43,11 +45,14 @@ h5 {
 h6 {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 20px;
+  line-height: 32px;
+  font-weight: 300;
 }
 
 p {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  line-height: 1.6;
 }
 
 /* hr {
