--- a/css/header.css
+++ b/css/header.css
@@ -7,12 +7,13 @@
   position: fixed;
   top: 0;
   z-index: 999;
+  color: rgb(255 , 255, 255);
+  mix-blend-mode: exclusion;
 }
 
 
 .small-header {
   width: 80vw;
-  /* max-width: 1152px; */
   height: 100px;
   /* background-color: yellowgreen; */
   position: fixed;
@@ -108,7 +109,7 @@ h2.small-name {
   z-index: -1;
   opacity: 0;
   top: 0;
-  left: -10vw;
+  left: 0vw;
   width: 100vw;
   height: 100vh;
   background: #000;
