--- a/css/sub.css
+++ b/css/sub.css
@@ -327,6 +327,26 @@
   background: url(../image/tennno-haruka/pack_3.jpg);
 }
 
+.slider-item71 {
+  background: url(../image/EOEC/logo_1.jpg);
+}
+
+.slider-item72 {
+  background: url(../image/EOEC/logo_2.jpg);
+}
+
+.slider-item73 {
+  background: url(../image/EOEC/logo_3.jpg);
+}
+
+.slider-item74 {
+  background: url(../image/EOEC/logo_4.jpg);
+}
+
+.slider-item75 {
+  background: url(../image/EOEC/logo_5.jpg);
+}
+
 .slider-item {
   width: 100%;
   height: 100%;
@@ -513,4 +533,21 @@ img.ten-logo {
 
 .ten-typo img {
   width: 100%;
+}
+
+.joyl-top {
+  position: relative;
+  z-index: 9;
+  margin-top: 64px;
+}
+
+.joyl-img {
+  width: 80vw;
+  height: auto;
+  margin-top: 40px;
+}
+
+.joyl-img img {
+  width: 100%;
+  border: 0.5px solid #333;
 }
