--- a/css/grid.css
+++ b/css/grid.css
@@ -13,6 +13,10 @@
   z-index: 9999;
 }
 
+.p-img:hover {
+  cursor: pointer;
+}
+
 .mix {
   mix-blend-mode: exclusion;
   color: rgb(255, 255, 255);
@@ -87,7 +91,7 @@
 
 .box-6 {
   grid-column: 1 / 5;
-  font-size: 64px;
+  font-size: 48px;
 }
 
 .box-7 {
@@ -108,7 +112,7 @@
 
 .box-10 {
   grid-column: 1 / 5;
-  font-size: 64px;
+  font-size: 48px;
 }
 
 .box-11 {
@@ -126,7 +130,7 @@
 
 .box-14 {
   grid-column: 1 / 5;
-  font-size: 64px;
+  font-size: 48px;
 }
 
 .box-15 {
@@ -157,7 +161,7 @@
 
 .box-20 {
   grid-column: 1 / 5;
-  font-size: 64px;
+  font-size: 48px;
 }
 
 .box-21 {
@@ -167,6 +171,12 @@
 .box-22 {
   grid-column: 3 / 5;
 }
+
+.box-23 {
+  grid-row: 4 / 5;
+}
+
+
 
 /* musk */
 .bgUD {
@@ -192,7 +202,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: .2s ease-in-out;
+  transition: .4s ease-in-out;
   transform: translateY(-100%);
   background-color: #fbdc00;
   width: 100%;
@@ -206,7 +216,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: .2s ease-in-out;
+  transition: .4s ease-in-out;
   transform: translateY(-100%);
   background-color: #d7271a;
   width: 100%;
@@ -220,7 +230,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: .2s ease-in-out;
+  transition: .4s ease-in-out;
   transform: translateY(-100%);
   background-color: #339641;
   width: 100%;
@@ -234,7 +244,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: .2s ease-in-out;
+  transition: .4s ease-in-out;
   transform: translateY(-100%);
   background-color: #cfa3ca;
   width: 100%;
@@ -248,7 +258,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: .2s ease-in-out;
+  transition: .4s ease-in-out;
   transform: translateY(-100%);
   background-color: #2eade4;
   width: 100%;
@@ -262,7 +272,7 @@
   left: 0;
   top: 0;
   opacity: 0;
-  transition: .2s ease-in-out;
+  transition: .4s ease-in-out;
   transform: translateY(-100%);
   background-color: #333;
   width: 100%;
@@ -301,4 +311,74 @@
 
 .cap h3 {
   font-size: 200%;
+}
+
+.emblem1,
+.emblem2,
+.emblem3,
+.emblem4 {
+  box-sizing: border-box;
+  width: 17vw;
+  height: 17vw;
+  border-radius: 50%;
+  animation: spinZ 20s linear infinite;
+  text-align: center;
+  overflow: hidden;
+  /* background-color: #339641; */
+}
+
+.emblem1 span,
+.emblem2 span,
+.emblem3 span,
+.emblem4 span {
+  position: absolute;
+  display: inline-block;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  text-transform: uppercase;
+  font-size: 1vw;
+  transition: all 0.5s cubic-bezier(0,0,0,1);
+}
+
+@keyframes spinZ {
+  0% {
+    transform: rotateZ(360deg);
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+
+.btn {
+  width: 18vw;
+  height: 18vw;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 0;
+}
+
+.btn::after{
+	content: "";
+	display: inline-block;
+	width: 18vw;
+	height: 18vw;
+	border-radius: 50%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	transition: all .3s;
+	transform: scale(.3);
+}
+.btn:hover{
+	color: #fff;
+}
+.btn:hover::after{
+	background: #000;
+	transform: scale(1);
 }
