--- a/css/grid.css
+++ b/css/grid.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
 .p-position {
+  position: fixed;
+  z-index: 9999;
   mix-blend-mode: exclusion;
 }
 
@@ -8,7 +10,7 @@
   width: 10vw;
   height: auto;
   position: fixed;
-  top: 40px;
+  top: 50px;
   right: 45vw;
   z-index: 9999;
 }
@@ -232,7 +234,7 @@
   opacity: 0;
   transition: .4s ease-in-out;
   transform: translateY(-100%);
-  background-color: #339641;
+  background-color: #58c2d7;
   width: 100%;
   height: 100%;
 }
@@ -260,7 +262,7 @@
   opacity: 0;
   transition: .4s ease-in-out;
   transform: translateY(-100%);
-  background-color: #2eade4;
+  background-color: #d4f028;
   width: 100%;
   height: 100%;
 }
@@ -375,9 +377,11 @@
 	transition: all .3s;
 	transform: scale(.3);
 }
+
 .btn:hover{
 	color: #fff;
 }
+
 .btn:hover::after{
 	background: #000;
 	transform: scale(1);
