--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+header {
+  position: relative;
+}
+
 .con_header-bg {
   width: 100vw;
   height: 100px;
@@ -35,17 +39,10 @@
   display: none;
 }
 
-.p-position {
-  width: 100%;
-  height: 100%;
-  /* background-color: violet; */
-  position: relative;
-  z-index: 9999;
-}
-
 .p-top img {
   height: 37px;
-  position: absolute;
+  position: fixed;
+  z-index: 9999;
   top: 32px;
   left: 50%;
   right: 50%;
@@ -158,13 +155,14 @@ h2.small-name {
 
 .g-nav-contents {
   position: absolute;
-  left:32vw;
-  top: 10vh;
+  left: 30px;
+  padding-top: 20px;
 }
 
-.g-nav-contents a {
+.g-nav-contents h2 {
   font-size: 2.5vw;
-  line-height: 1.4;
+  line-height: 1.2;
+
 }
 
 .g-nav-contents li a {
