--- a/css/sub.css
+++ b/css/sub.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+.content-width img {
+  width: 100%;
+  height: auto;
+}
+
 .big-header {
   display: none;
   font-size: 15vw;
@@ -537,6 +542,7 @@ h1.eoec {
   font-size: 4.15vw;
 }
 
+
 .img-position {
   width: 40vw;
   margin: 20px 0 0 auto;
@@ -584,8 +590,8 @@ img.ten-logo {
 }
 
 .shizuku-icon img {
-  width: 80%;
-  margin-left: 10%;
+  width: 70%;
+  margin-left: 15%;
 }
 
 .joyl-before {
