--- a/css/profile.css
+++ b/css/profile.css
@@ -1,39 +1,152 @@
+.left-title {
+  width: 70%;
+  /* background-color: yellow; */
+}
+
+.left-title h1 {
+  font-size: 6vw;
+  padding-bottom: 32px;
+}
+
+.right-title {
+  width: 30%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  /* background-color: yellowgreen; */
+}
+
+.right-title h1 {
+  font-size: 4.8vw;
+  padding-top: 3%;
+  padding-bottom: 38px;
+}
+
+.area {
+  height: 120vw;
+}
+
+.profile-img {
+  width: 50%;
+  height: auto;
+  margin-top: -25px;
+  z-index: -10;
+}
+
 #luxy li img {
-  width: 110px;
+  width: 7vw;
 }
 
 .timeline {
   width: 38vw;
-  margin: 20vh 10vw auto auto;
-  margin: 50px auto;
-  padding: 0 30px;
+  margin: -200px auto 0 35%;
+  /* background-color: violet; */
 }
 
 .timeline li {
   position: relative;
   list-style: none;
   padding: 0 0 20px 0;
+  height: 12vw;
 }
 
-.timeline dl {
-  margin: 0 0 20px 3em;
+.timeline dt img {
+  position: absolute;
+  top: -3.5vw;
+  left: -3.3vw;
+  z-index: 5;
+}
+
+.timeline p {
+  position: absolute;
+  top: -20%;
+  /* background-color: aqua; */
+  margin: auto 0 auto 7vw ;
+  font-weight: 400;
+
 }
 
 .border-line {
   position: absolute;
-  left: 0.2em;
+  left: 0.25em;
   top: 0;
   width: 2px;
   height: 0%;
-  background: #333;
+  background: #000;
+  z-index: 2;
 }
 
-.timeline li::after {
+.timeline li.point::after {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 10px;
   height: 10px;
-  background-color: #666;
+  background-color: #000;
 }
+
+.right-width-p {
+  width: 61.3%;
+  height: auto;
+  /* background-color: yellow; */
+  margin: 90vw 0 0 auto;
+  /* position: relative; */
+}
+
+h6.career {
+  margin-top: 24px;
+}
+
+.important-box {
+  margin-top: -20vw;
+  mix-blend-mode: exclusion;
+  color: rgb(255, 255, 255);
+  /* background-color: aquamarine; */
+}
+
+.important-box h1 {
+  margin-bottom: 5vw;
+}
+
+.skill li {
+  display: flex;
+}
+
+.skill li:hover {
+  .star {
+    display: block;
+  }
+}
+
+.star {
+  display: none;
+  margin: -0.5vh 0 0 2%;
+}
+
+.star img {
+  height: 22px;
+  width: auto;
+}
+
+.value-box {
+  display: grid;
+  gap: 1vw;
+  grid-template-columns: 23.5% 23.5% 23.5% 23.5%;
+  grid-template-rows: auto;
+  /* background-color: violet; */
+  position: relative;
+  z-index: 100;
+}
+
+.back-moji {
+  width: 150%;
+  margin-left: 20vw;
+  margin-top: 10vw;
+}
+
+.identity-box {
+  margin-top: 10vw;
+}
+
