--- a/css/profile.css
+++ b/css/profile.css
@@ -150,3 +150,23 @@ h6.career {
   margin-top: 10vw;
 }
 
+
+.move .animation-pro {
+  background: #fff;
+  opacity: 1;
+  display: block;
+  content: "";
+  position: fixed;
+  z-index: 99999;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  animation-duration: 1.0s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.ttb .animation-pro {
+  animation-name: PageAnime-ttb;
+}
