--- a/css/grid.css
+++ b/css/grid.css
@@ -300,7 +300,7 @@
   left: 50%;
   transform: translate(-50%,-50%);
   color: #fff;
-  line-height: 1.2;
+  line-height: 1;
   overflow: wrap;
   width: 100%;
   height: 100%;
@@ -318,7 +318,8 @@
 .emblem1,
 .emblem2,
 .emblem3,
-.emblem4 {
+.emblem4,
+.emblem5 {
   box-sizing: border-box;
   width: 17vw;
   height: 17vw;
@@ -332,7 +333,8 @@
 .emblem1 span,
 .emblem2 span,
 .emblem3 span,
-.emblem4 span {
+.emblem4 span,
+.emblem5 span {
   position: absolute;
   display: inline-block;
   left: 0;
