--- a/css/mobile/profile_mb.css
+++ b/css/mobile/profile_mb.css
@@ -1,34 +1,34 @@
 @charset "utf-8";
 
 .left-title {
-  width: 70%;
+  width: 60%;
   /* background-color: yellow; */
   p {
-    line-height: 2vw;
+    line-height: 1.4;
   }
 }
 
 .left-title h1 {
   font-size: 6vw;
-  padding-bottom: 32px;
+  padding-bottom: 2vw;
 }
 
 .right-title {
-  width: 30%;
+  width: 40%;
   position: absolute;
   top: 0;
   right: 0;
   text-align: right;
   /* background-color: yellowgreen; */
   p {
-    line-height: 2vw;
+    line-height: 1.4;
   }
 }
 
 .right-title h1 {
   font-size: 4.8vw;
   padding-top: 3%;
-  padding-bottom: 38px;
+  padding-bottom: 2vw;
 }
 
 .area {
@@ -36,50 +36,50 @@
 }
 
 .profile-img {
-  width: 50%;
+  width: 80%;
   height: auto;
-  margin-top: -25px;
+  margin-top: -14px;
   z-index: -10;
 }
 
 #luxy li img {
-  width: 7vw;
+  width: 10vw;
 }
 
 .timeline {
-  width: 44vw;
-  margin: -200px auto 0 35%;
+  width: 50vw;
+  margin: -200px auto 0 40%;
   /* background-color: violet; */
 }
 
 .timeline li {
   position: relative;
   list-style: none;
-  padding: 0 0 20px 0;
-  height: 12vw;
+  padding: 0 0 12vw 0;
+  height: 14vw;
 }
 
 .timeline dt img {
   position: absolute;
-  top: -3.5vw;
-  left: -3.3vw;
+  top: -4vw;
+  left: -4vw;
   z-index: 5;
 }
 
 .timeline p {
   position: absolute;
-  top: -25%;
+  top: -20%;
   /* background-color: aqua; */
   margin: auto 0 auto 7vw ;
-  font-weight: 400;
-  line-height: 2.5vw;
+  font-weight: 300;
+  line-height: 1.4;
 }
 
 .border-line {
   position: absolute;
-  left: 0.25em;
+  left: 0.2em;
   top: 0;
-  width: 2px;
+  width: 1.5px;
   height: 0%;
   background: #000;
   z-index: 2;
@@ -90,16 +90,16 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 10px;
-  height: 10px;
+  width: 8px;
+  height: 8px;
   background-color: #000;
 }
 
 .right-width-p {
-  width: 61.3%;
+  width: 100%;
   height: auto;
   /* background-color: yellow; */
-  margin: 90vw 0 0 auto;
+  margin: 130vw 0 0 auto;
   /* position: relative; */
 }
 
@@ -107,19 +107,8 @@ h6.career {
   margin-top: 24px;
 }
 
-.important-box {
-  margin-top: 240px;
-  mix-blend-mode: exclusion;
-  color: rgb(255, 255, 255);
-  /* background-color: aquamarine; */
-}
-
-.important-box h1 {
-  margin-bottom: 5vw;
-}
-
 .skill {
-  margin-top: 80px;
+  margin-top: 24px;
 }
 
 .skill li {
@@ -127,15 +116,8 @@ h6.career {
   padding: 3px 0;
 }
 
-.skill li:hover {
-  .star {
-    display: block;
-  }
-}
-
 .star {
-  display: none;
-  margin: -0.5vh 0 0 2%;
+  margin: -0.3vh 0 0 2%;
 }
 
 .star img {
@@ -143,29 +125,31 @@ h6.career {
   width: auto;
 }
 
+.back-moji {
+  display: none;
+}
+
+.important-box {
+  margin-top: 120px;
+}
+
 .value-box {
+  margin-top: 24px;
   display: grid;
-  gap: 1vw;
-  grid-template-columns: 23.5% 23.5% 23.5% 23.5%;
+  gap: 2vw;
+  grid-template-columns: 49% 49%;
   grid-template-rows: auto;
   /* background-color: violet; */
   position: relative;
   z-index: 100;
 }
 
-/* .back-moji {
-  width: 150%;
-  margin-left: 20vw;
-  margin-top: 10vw;
-} */
-
 .identity-box {
-  margin-top: 160px;
+  margin-top: 80px;
   h6 {
-    margin-top: 80px;
+    margin-top: 24px;
   }
 }
-
 
 .move .animation-pro {
   background: #fff;
@@ -185,12 +169,4 @@ h6.career {
 
 .ttb .animation-pro {
   animation-name: PageAnime-ttb;
-}
-
-.identity-box {
-  margin-top: 240px;
-  h6 {
-    margin-top: 5vw;
-    line-height: 1.6;
-  }
 }
