--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   font-family: sans-serif;
   overflow-wrap: break-word;
   background-color: rgb(255, 255, 255);
+  text-align: justify;
 }
 
 html {
@@ -52,9 +53,8 @@ h6 {
 
 p {
   font-family: 'Helvetica Neue', sans-serif;
-  font-size: 1.4vw;
-  line-height: 1.6;
-  line-height: 1;
+  font-size: 1.2vw;
+  line-height: 1.8vw;
 }
 
 /* hr {
@@ -96,7 +96,7 @@ p {
 .content-box {
   width: 80%;
   margin: 0 auto;
-  height: 80vh;
+  height: auto;
   /* background-color: bisque; */
 }
 
@@ -151,6 +151,33 @@ ul.content-list {
 .tennoharuka-logo {
   width: 41%;
   margin: 0 auto;
+}
+
+.footer {
+  position: relative;
+  width: 80vw;
+  height: 400px;
+  margin: 10vw 0 3vw 10vw;
+  /* background-color: violet; */
+}
+
+#topbtn6 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX( -50%);
+}
+
+.contact {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-align: right;
+  p {
+    line-height: 1.4;
+    font-size: 16px;
+  }
 }
 
 
@@ -349,9 +376,4 @@ ul.content-list {
     opacity: 0;
     transform: translateY(100px);
   }
-}
-
-#footer {
-  width: 100vw;
-  height: 400px;
 }
